--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,12 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#8692f7</color>
 
+    <color name="blue">#1a9df1</color>
+    <color name="yellow">#ffd230</color>
+
+
+
+
+
 
 </resources>
