--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,27 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/bottom_home"
-        android:title="Home"
+        android:title=""
         android:icon="@drawable/baseline_home_24"/>
 
     <item
         android:id="@+id/bottom_search"
-        android:title="Search"
+        android:title=""
         android:icon="@drawable/baseline_search_24"/>
 
     <item
         android:id="@+id/bottom_add"
-        android:title="Add"
+        android:title=""
         android:icon="@drawable/baseline_add_box_24"/>
 
     <item
         android:id="@+id/bottom_reels"
-        android:title="Reels"
+        android:title=""
         android:icon="@drawable/baseline_movie_filter_24"/>
 
     <item
         android:id="@+id/bottom_profile"
-        android:title="Profile"
+        android:title=""
         android:icon="@drawable/baseline_person_24"/>
 
 </menu>
