--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <color name="blue">#1a9df1</color>
     <color name="yellow">#ffd230</color>
+    <color name="dark_gray">#333333</color>
 
 
 
