--- a/app/src/main/res/layout/activity_bottom_sheet.xml
+++ b/app/src/main/res/layout/activity_bottom_sheet.xml
@@ -14,17 +14,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MediLab"
-        android:textSize="70sp"
+        android:textSize="50sp"
+        android:fontFamily="@font/italic"
         android:layout_gravity="center"
-        android:layout_marginBottom="400dp"
-        android:textColor="@color/black"
+        android:layout_marginBottom="250dp"
+        android:textColor="@color/white"
         android:textStyle="bold"/>
 
 
     <FrameLayout
         android:id="@+id/sheet"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="400dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         android:background="@drawable/rounded">
 
@@ -47,21 +48,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Welcome"
-                android:textSize="40sp"
+                android:textSize="30sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="@color/black"
-                android:layout_marginTop="15dp"/>
+                android:layout_marginTop="6dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Get Started with Your Account"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textAlignment="center"
                 android:textStyle="normal"
                 android:textColor="@color/black"
-                android:padding="8dp"
                 android:layout_marginTop="15dp"/>
 
             <Button
