--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0FFFFF"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SearchFragment">
 
@@ -32,7 +33,8 @@
             android:id="@+id/recyclerView"
             android:layout_marginTop="8dp"
             android:scrollbars="vertical"
-            android:layout_below="@+id/search"/>
+            android:layout_below="@+id/search"
+            tools:listitem="@layout/single_item"/>
 
     </RelativeLayout>
 
